Add EdgeGesture service
Based on code of PieService

Change-Id: I053737e36340a5ec6814b21eb87575f9689c7e88
Signed-off-by: Corey Edwards <ensabahnur16@gmail.com>
Signed-off-by: Varun Date <date.varun123@gmail.com>
Signed-off-by: bablusss <baaswanthmadhav@gmail.com>

--- a/core/res/res/values/validus_config.xml
+++ b/core/res/res/values/validus_config.xml
@@ -72,4 +72,9 @@
     <!-- Whether the device supports Smart Pixels -->
     <bool name="config_enableSmartPixels">false</bool>
 
+    <!-- EdgeGesture service --> 
+    <java-symbol type="dimen" name="edge_gesture_trigger_distance" /> 
+    <java-symbol type="dimen" name="edge_gesture_perpendicular_distance" /> 
+    <java-symbol type="dimen" name="edge_gesture_trigger_thickness" /> 
+
 </resources>
