--- a/core/res/res/values/gzosp_symbols.xml
+++ b/core/res/res/values/gzosp_symbols.xml
@@ -26,4 +26,7 @@
     <java-symbol type="string" name="reboot_title" />
     <java-symbol type="string" name="reboot_message" />
 
+    <!-- Whether device has dash charging support -->
+    <java-symbol type="bool" name="config_hasDashCharger" />
+
 </resources>
