--- a/core/res/res/values/validus_symbols.xml
+++ b/core/res/res/values/validus_symbols.xml
@@ -91,4 +91,8 @@
     <java-symbol type="drawable" name="deadpool_clock_hand_hour" />
     <java-symbol type="drawable" name="deadpool_clock_hand_minute" />
 
+    <!-- Full screen aspect ratio --> 
+    <java-symbol type="bool" name="config_haveHigherAspectRatioScreen" /> 
+    <java-symbol type="dimen" name="config_screenAspectRatio" />
+
 </resources>
