--- a/packages/SystemUI/res/layout/global_actions_wrapped.xml
+++ b/packages/SystemUI/res/layout/global_actions_wrapped.xml
@@ -14,7 +14,7 @@
         android:layout_width="@dimen/global_actions_panel_width"
         android:layout_height="wrap_content"
         android:scrollbars="none"
-        android:layout_gravity="top|right">
+        android:layout_gravity="top|end">
 
         <LinearLayout
             android:id="@android:id/list"
