--- a/core/res/res/values/validus_config.xml
+++ b/core/res/res/values/validus_config.xml
@@ -81,4 +81,6 @@
     <bool name="config_haveHigherAspectRatioScreen">false</bool> 
     <item name="config_screenAspectRatio" format="float" type="dimen">2.1</item>
 
+    <!-- Whether device has a notch -->
+    <bool name="config_haveNotch">false</bool>
 </resources>
