--- a/core/res/res/values/validus_symbols.xml
+++ b/core/res/res/values/validus_symbols.xml
@@ -95,4 +95,7 @@
     <java-symbol type="bool" name="config_haveHigherAspectRatioScreen" /> 
     <java-symbol type="dimen" name="config_screenAspectRatio" />
 
+    <!-- Notch -->
+    <java-symbol type="bool" name="config_haveNotch" />
+
 </resources>
