--- a/packages/SystemUI/res/values/gzosp_dimens.xml
+++ b/packages/SystemUI/res/values/gzosp_dimens.xml
@@ -7,4 +7,6 @@
     <!-- Network traffic monitor -->
     <dimen name="net_traffic_multi_text_size">8dp</dimen>
     <dimen name="net_traffic_txt_img_padding">2dp</dimen>
+
+    <dimen name="quick_status_bar_system_icons_margin_top">8dp</dimen>
 </resources>
