--- a/packages/SystemUI/res/xml/tuner_prefs.xml
+++ b/packages/SystemUI/res/xml/tuner_prefs.xml
@@ -43,7 +43,7 @@
         android:key="status_bar"
         android:title="@string/status_bar" >
 
-        <com.android.systemui.tuner.StatusBarSwitch
+        <!--<com.android.systemui.tuner.StatusBarSwitch
             android:key="headset"
             android:title="@string/headset" />-->
 
